--- a/report/resources.tex
+++ b/report/resources.tex
@@ -1,5 +1,5 @@
 \section{Resources}
-Here we present the main external resources that were used to perform this work.
+Here we present the main external resources that were used to perform this work. The actual code for this project can be found in the \href{https://github.com/semplea/characters-meta}{GitHub repository} \footnote{\href{https://github.com/semplea/characters-meta}{https://github.com/semplea/characters-meta}}.
 
 \subsection{Data} \label{ssec:data}
 The books we worked with were all processed in the form of a simple text file, provided by Project Gutenberg. Each file was then processed so that each chapter was written onto a single line.
