--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -140,3 +140,10 @@
   pages={993--1022},
   year={2003}
 }
+
+@article{liwc2015,
+  title={Linguistic inquiry and word count: LIWC2015},
+  author={Pennebaker, James W and Francis, Martha E and Booth, Roger J and Boyd, Ryan L},
+  journal={Austin TX, Pennebaker Conglomerates},
+  year={2015}
+}
